RHINENG-12346 Add resource unit query parameters to list recommendations api endpoint (#255)
* Add unit selection query parameters
* handle govet format issues
